# subnetter

./: README.md
subnetter/: pyproject.toml
subnetter/src/subnetter/: app.py  subnet_calculator.py
subnetter/src/subnetter/templates/: index.html  result.html
subnetter/tests/: conftest.py  test_subnet_calculator.py
